Fixes issue 239
git-svn-id: https://svn.apache.org/repos/asf/incubator/syncope/trunk@1247388 13f79535-47bb-0310-9956-ffa450edef68